[clock] Validate input in add location dialog

Make the OK button sensitive only when a city name and a timezone are
defined.

https://bugzilla.gnome.org/show_bug.cgi?id=608830